sidebar vertical overflow fix

--- a/assets/css/author.css
+++ b/assets/css/author.css
@@ -1,6 +1,6 @@
 .sidebar {
   @apply flex-col bg-[var(--background-card)] lg:w-56 md:w-44 p-5 rounded-md h-[calc(100vh-5.3rem)] border border-[var(--border)]
-  md:flex hidden
+  md:flex hidden overflow-y-auto
 }
 
 .sidebar-group {
